2025-04-16T00:53:42Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14482313026 # 615
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-16
* notice: last 14d: unq all: 3 15
* notice: prev accum: outdated-unq outdated-all / unq all: 503 896 / 518 911
* notice: next accum: outdated-unq outdated-all / unq all: 504 897 / 519 912
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-04-01] / [2025-04-15]

2025-04-15T00:53:45Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14458835641 # 614
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-15
* notice: last 14d: unq all: 3 15
* notice: prev accum: outdated-unq outdated-all / unq all: 503 896 / 517 910
* notice: next accum: outdated-unq outdated-all / unq all: 503 896 / 518 911
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-04-14]

2025-04-14T00:55:23Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14435153385 # 613
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-14
* notice: last 14d: unq all: 3 14
* notice: prev accum: outdated-unq outdated-all / unq all: 503 896 / 516 909
* notice: next accum: outdated-unq outdated-all / unq all: 503 896 / 517 910
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-04-13]

2025-04-13T02:22:26Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14425151314 # 612