@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-04-16T00:53:42Z",
-  "count_outdated" : 897,
-  "uniques_outdated" : 504,
-  "count" : 912,
-  "uniques" : 519,
+  "timestamp" : "2025-04-17T00:52:36Z",
+  "count_outdated" : 898,
+  "uniques_outdated" : 505,
+  "count" : 913,
+  "uniques" : 520,
   "clones" : [
-    {
-      "timestamp": "2025-04-02T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-04-03T00:00:00Z",
       "count": 2,
@@ -115,6 +106,15 @@
     },
     {
       "timestamp": "2025-04-15T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-04-16T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
