@@ -1,3 +1,12 @@
+2025-04-17T00:52:36Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14505625684 # 616
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-17
+* notice: last 14d: unq all: 3 15
+* notice: prev accum: outdated-unq outdated-all / unq all: 504 897 / 519 912
+* notice: next accum: outdated-unq outdated-all / unq all: 505 898 / 520 913
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-04-02] / [2025-04-16]
+
 2025-04-16T00:53:42Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14482313026 # 615
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-16
